# serialib

./: .gitignore  CMakeLists.txt  README.md
example1/: main.cpp
example2/: main.cpp
example3/: main.cpp
example4/: main.cpp
example5/: main.cpp
lib/: serialib.cpp  serialib.h
